# avito_recsys

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke_test.py
docs/: 1_Clarifying_requirements.md  2_Formulation_of_the_problem_as_a_ML_task.md  2_Fromulation_of_the_problem_as_a_ML_task.txt  3_data_processing.md  experiments.md
notebooks/: 01_intro_to_recsys.ipynb  eda.ipynb
src/: 1_global_recomputing.py  2_generate_features.py  3_train_catboost.py  4_inference.py  add_popular_fallback.py  aggregate.py  aggregate_eval_users.py  build_covisitation.py  build_features.py  build_item_pool.py  build_matrix.py  create_local_eval.py  download_full.sh  download_full_strong.sh  download_research.sh  eval_popular_baseline.py  eval_recall.py  events_counter.py  generate_candidates.py  generate_candidates_covisit.py  generate_candidates_synth.py  merge_candidates.py  train_als.py  train_ranker.py
