[project]
name = "avito-recsys"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyarrow",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
gpu = [
    "implicit>=0.7",
    "catboost>=1.2",
]
notebook = [
    "jupyterlab",
    "matplotlib",
    "nbstripout",
]

[tool.uv]
dev-dependencies = [
    "ruff",
]
