[project]
name = "avito-recsys"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyarrow",
    "numpy",
    "scipy",
    "pandas",
    "beartype",
]

[project.optional-dependencies]
gpu = [
    "implicit>=0.7",
    "catboost>=1.2",
]
notebook = [
    "ipykernel",
    "matplotlib",
    "nbstripout", # чтобы не коммитить выводы ячеек и картинки
]

[tool.uv]
dev-dependencies = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E, F - базовые ошибки, I - сортировка импортов, UP - современный синтаксис, PT - pytest (на будущее)
select = ["E", "F", "I", "UP", "PT"]
