[project]
name = "avito-recsys"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyarrow",
    "numpy",
    "scipy",
    "pandas",
    "beartype",
    "implicit>=0.7",
    "catboost>=1.2",
    "duckdb>=1.5.4",
]

[dependency-groups]
dev = [
    "ruff",
    "ipykernel",
    "matplotlib",
    "nbstripout",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E, F - база, I - сортировка импортов, UP - современный синтаксис, PT - pytest
select = ["E", "F", "I", "UP", "PT"]
